kubernetes/pii-demo-blue-green/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pii-demo
  labels:
    istio-injection: enabled
